--- a/spring-jwt_spring-jwt/src/main/resources/application.properties
+++ b/spring-jwt_spring-jwt/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.platform=mysql
 jwt.secret=javainuse
+
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
